Add header and first section

--- a/index.html
+++ b/index.html
@@ -6,20 +6,338 @@
     <title>EU Capnaign</title>
     <link rel="stylesheet" href="assets/styles/one-page-css.css" />
     <link rel="stylesheet" href="assets/styles/one-page-responsive.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
-    <link href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css " rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Sans+Georgian:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css "
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Sans+Georgian:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
- 
-  <body>  
 
+  <body>
+    <header>
+      <div class="top-header">
+        <div class="handle-container-big">
+          <div class="t-header">
+            <a href="#" class="back-button">
+              <span class="flex-center-0">
+                <svg
+                  width="23"
+                  height="22"
+                  viewBox="0 0 23 22"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M11.3437 12.3177L11.3437 21.6515L0.678632 10.9864L11.3437 0.321351L11.3437 9.65516L22.0097 9.65422L22.0106 12.3214L11.3437 12.3177Z"
+                    fill="#FFCC02"
+                  />
+                </svg>
+              </span>
+              <div class="text-back">Back to Main website</div>
+            </a>
+            <div class="soc-links-header">
+              <a href="#">
+                <svg
+                  width="16"
+                  height="28"
+                  viewBox="0 0 16 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M9.83683 16.2432V27.9399H4.46377V16.2432H0V11.5004H4.46377V9.77484C4.46377 3.3685 7.13997 0 12.8023 0C14.5383 0 14.9722 0.278986 15.9229 0.506308V5.1974C14.8586 5.01141 14.5589 4.90808 13.4533 4.90808C12.141 4.90808 11.4384 5.28007 10.7978 6.01369C10.1572 6.74732 9.83683 8.01826 9.83683 9.83683V11.5107H15.9229L14.2903 16.2535H9.83683V16.2432Z"
+                    fill="black"
+                  />
+                </svg>
+              </a>
+              <a href="#">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.9456 23.9485H4.00289C1.79983 23.9485 0 22.1487 0 19.9456V4.00289C0 1.79983 1.79983 0 4.00289 0H19.9456C22.1487 0 23.9485 1.79983 23.9485 4.00289V19.9456C23.9485 22.1585 22.1585 23.9485 19.9456 23.9485Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M11.979 18.1259C10.3365 18.1259 8.7924 17.4866 7.63186 16.3261C6.47131 15.1656 5.83203 13.6214 5.83203 11.979C5.83203 10.3365 6.47131 8.7924 7.63186 7.63186C8.7924 6.47131 10.3365 5.83203 11.979 5.83203C13.6214 5.83203 15.1656 6.47131 16.3261 7.63186C17.4866 8.7924 18.1259 10.3365 18.1259 11.979C18.1259 13.6214 17.4866 15.1656 16.3261 16.3261C15.1557 17.4866 13.6214 18.1259 11.979 18.1259ZM11.979 7.1401C9.31366 7.1401 7.1401 9.30383 7.1401 11.979C7.1401 14.6443 9.30383 16.8178 11.979 16.8178C14.6443 16.8178 16.8179 14.6541 16.8179 11.979C16.808 9.31366 14.6443 7.1401 11.979 7.1401Z"
+                    fill="#FFCC02"
+                  />
+                  <path
+                    d="M19.3243 5.63026C19.9761 5.63026 20.5045 5.10185 20.5045 4.45002C20.5045 3.79819 19.9761 3.26978 19.3243 3.26978C18.6725 3.26978 18.144 3.79819 18.144 4.45002C18.144 5.10185 18.6725 5.63026 19.3243 5.63026Z"
+                    fill="#FFCC02"
+                  />
+                </svg>
+              </a>
+              <a href="#">
+                <svg
+                  width="28"
+                  height="24"
+                  viewBox="0 0 28 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0 20.516C2.95402 20.6822 5.53719 19.9917 8.05642 18.163C5.51161 17.7282 3.74688 16.5645 2.78778 14.1604C3.52948 14.0581 4.18167 14.2499 4.94895 13.943C2.44251 12.8432 0.818433 11.1936 0.754493 8.34184C1.54735 8.40578 2.14839 8.93008 3.0947 8.85336C0.792863 6.60267 0.0895157 4.14738 1.53456 1.16779C3.93869 3.92999 6.75206 5.80982 10.192 6.69219C10.3838 6.74334 10.5629 6.79449 10.7547 6.83286C11.637 7.03746 12.6857 7.47226 13.2228 7.40832C14.1435 7.29322 13.2228 6.23182 13.453 4.85072C14.1819 0.553966 18.9134 -1.40259 22.4173 1.11664C23.4403 1.85834 24.246 1.84555 25.2562 1.39797C25.7805 1.16779 26.3176 0.937605 26.9443 0.669058C26.8036 1.8967 25.8573 2.57446 25.1028 3.48241C25.9596 3.67423 26.6501 3.43126 27.443 3.1755C27.1744 4.05787 26.5095 4.5566 25.9084 5.04254C25.2818 5.54127 25.0388 6.06558 25.0133 6.88401C24.6296 19.2755 10.5501 28.8537 0.920743 21.2321C-0.0127786 20.4904 0.895158 21.2321 0 20.516Z"
+                    fill="black"
+                  />
+                </svg>
+              </a>
+              <a href="#">
+                <svg
+                  width="21"
+                  height="21"
+                  viewBox="0 0 21 21"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M4.71295 6.74951H0.583008V19.9197H4.71295V6.74951Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M15.8846 6.46368C15.7324 6.44464 15.5706 6.43513 15.4088 6.42561C13.0965 6.33045 11.7928 7.70076 11.336 8.29075C11.2123 8.45252 11.1552 8.54768 11.1552 8.54768V6.78722H7.20605V19.9574H11.1552H11.336C11.336 18.6156 11.336 17.2834 11.336 15.9416C11.336 15.2184 11.336 14.4952 11.336 13.772C11.336 12.8775 11.2694 11.9259 11.7166 11.1075C12.0973 10.4223 12.7824 10.0798 13.5532 10.0798C15.8371 10.0798 15.8846 12.1447 15.8846 12.335C15.8846 12.3446 15.8846 12.3541 15.8846 12.3541V20.0145H20.0146V11.4215C20.0146 8.48107 18.5206 6.74916 15.8846 6.46368Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M2.64803 5.04606C3.97242 5.04606 5.04606 3.97243 5.04606 2.64803C5.04606 1.32363 3.97242 0.25 2.64803 0.25C1.32363 0.25 0.25 1.32363 0.25 2.64803C0.25 3.97243 1.32363 5.04606 2.64803 5.04606Z"
+                    fill="black"
+                  />
+                </svg>
+              </a>
+              <a href="#">
+                <svg
+                  width="27"
+                  height="18"
+                  viewBox="0 0 27 18"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M22.1635 17.8493H4.31281C1.92433 17.8493 0 15.7369 0 13.1387V4.71051C0 2.10178 1.934 0 4.31281 0H22.1635C24.552 0 26.4764 2.11234 26.4764 4.71051V13.1387C26.486 15.7475 24.552 17.8493 22.1635 17.8493Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M17.9215 8.7927L10.4121 4.4624V13.123L17.9215 8.7927Z"
+                    fill="#FFCC02"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-header">
+        <div class="handle-container-big">
+          <div class="b-header flex-center-0">
+            <div href="#" class="logo">
+              <a href="#">
+                <img src="assets/img/Logo.png" alt="logo" />
+              </a>
+            </div>
+            <nav class="nav-menu">
+              <ul>
+                <li class="scroll_data_id active-link">
+                  <a data-id="1">Recommendations</a>
+                </li>
+                <li class="scroll_data_id">
+                  <a data-id="2">About Us</a>
+                </li>
+                <li class="scroll_data_id">
+                  <a data-id="3">Articles</a>
+                </li>
+                <li class="scroll_data_id">
+                  <a data-id="4">News</a>
+                </li>
+                <li class="scroll_data_id">
+                  <a data-id="5">image gallery</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="lang-search-box">
+              <div class="lang-box">
+                <div class="lang-vector">
+                  <span>
+                    <svg
+                      width="12"
+                      height="8"
+                      viewBox="0 0 12 8"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.41 0.590088L6 5.17009L10.59 0.590088L12 2.00009L6 8.00009L0 2.00009L1.41 0.590088Z"
+                        fill="#282828"
+                      />
+                    </svg>
+                  </span>
+                </div>
+                <ul>
+                  <li class="lang-li">
+                    <a href="#">Eng</a>
+                  </li>
+                  <li class="lang-li">
+                    <a href="#">Geo</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="burger-icon">
+            <div class="open-burger-icon">
+              <span>
+                <svg
+                  width="36"
+                  height="24"
+                  viewBox="0 0 36 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0 24H24V20H0V24ZM0 0V4H36V0H0ZM0 14H36V10H0V14Z"
+                    fill="#282828"
+                  />
+                </svg>
+              </span>
+            </div>
+            <div class="close-burger-icon">
+              <span>
+                <svg
+                  width="30"
+                  height="30"
+                  viewBox="7 10 30 30"
+                  fill="#000"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M23.6172 21.4392L29.4643 15.5922L31.4133 17.5412L25.5662 23.3883L31.4133 29.2353L29.4643 31.1844L23.6172 25.3373L17.7701 31.1844L15.8211 29.2353L21.6682 23.3883L15.8211 17.5412L17.7701 15.5922L23.6172 21.4392Z"
+                    fill="#000"
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+          <div class="burger-menu">
+            <div class="burger-box">
+              <div class="burger-list"></div>
+            </div>
+            <div class="burger-lang">
+              <a href="#">ENG</a>
+              <a href="#">GEO</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js" ></script>
+    <main>
+      <section id="1">
+        <div class="recomendation-section">
+          <div class="handle-container-small">
+            <div class="relative-rec">
+              <div class="absolute-tab-rec">
+                <div class="grid-container">
+                    <div class="item item1"><img src="assets/img/item-1.svg" alt="item">
+                        <div class="text">
+                            political 
+                            polarization
+                        </div>
+                    </div>
+                    <div class="item item2">Item 2</div>
+                    <div class="item item3">Item 3</div>
+                    <div class="item item4">Item 4</div>
+                    <div class="item item5">Item 5</div>
+                    <div class="item item6">Item 6</div> 
+                    <div class="item item7">Item 7</div>
+                    <div class="item item8">Item 8</div>
+                    <div class="item item9">Item 9</div> 
+                  </div>
+                <!-- <div class="rec-tabs">
+                  <ul id="tabs-nav">
+                    <li><div data-tab-id="tab1">Bob</div></li>
+                    <li><div data-tab-id="tab2">Dante</div></li>
+                    <li><div data-tab-id="tab3">Randall</div></li>
+                    <li><div data-tab-id="tab4">Jay</div></li>
+                  </ul>
+                  <div id="tabs-content">
+                    <div id="tab1" class="tab-content">
+                      <h2>Silent Bob</h2>
+                      <div>
+                        adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quisLorem
+                        ipsum dolor sit amet, and consectetur adipiscing elit,
+                        sed do eiusmod tempor veniam, quisLorem ipsum dolor sit
+                        so amet, consectetur adipiscing elit, sed do veniam,
+                        quisLorem ipsum dolor sit amet, are consectetur
+                        adipiscing elit, sed do eiusmod
+                      </div>
+                    </div>
+                    <div id="tab2" class="tab-content">
+                      <h2>Dante Hicks</h2>
+                      <p>
+                        "My friend here's trying to convince me that any
+                        independent contractors who were working on the
+                        uncompleted Death Star were innocent victims when it was
+                        destroyed by the Rebels."
+                      </p>
+                    </div>
+                    <div id="tab3" class="tab-content">
+                      <h2>Randall Graves</h2>
+                      <p>
+                        "In light of this lurid tale, I don't even see how you
+                        can romanticize your relationship with Caitlin. She
+                        broke your heart and inadvertently drove men to deviant
+                        lifestyles."
+                      </p>
+                    </div>
+                    <div id="tab4" class="tab-content">
+                      <h2>Jay</h2>
+                      <p>
+                        "I don't care if she's my cousin or not, I'm gonna knock
+                        those boots again tonight."
+                      </p>
+                    </div>
+                  </div>
+                </div> -->
+           
+
+                
+              </div>
+              <div class="lines-background-img">
+                <img src="assets/img/background-lines.svg" alt="lines" />
+              </div>
+              <div class="rec-text">
+                <div class="title">
+                  Recommendations That Georgia Be Granted EU Candidate Status
+                </div>
+                <div class="rec-link">
+                  <a href="#">Get Involved</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> 
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="assets/js/one-page-js.js"></script>
-
   </body>
 </html>
