--- a/index.html
+++ b/index.html
@@ -474,52 +474,271 @@
             </div>
           </div>
           <div class="reels-slider">
-            <div class="reels-item"  data-video-url="https://www.youtube.com/embed/3fy096broac">
-              <a href="https://www.youtube.com/embed/3fy096broac" data-fancybox="reels-gallery"> 
-                <img src='' alt="Thumbnail 1">
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/3fy096broac"
+            >
+              <a
+                href="https://www.youtube.com/embed/3fy096broac"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 1" />
               </a>
             </div>
-            <div class="reels-item" data-video-url="https://www.youtube.com/embed/NlPnw4AE980">
-              <a href="https://www.youtube.com/embed/NlPnw4AE980" data-fancybox="reels-gallery"> 
-                 <img src="" alt="Thumbnail 2">
-              </a>
-            </div> 
-            <div class="reels-item"  data-video-url="https://www.youtube.com/embed/3fy096broac">
-              <a href="https://www.youtube.com/embed/3fy096broac" data-fancybox="reels-gallery"> 
-                <img src='' alt="Thumbnail 1">
-              </a>
-            </div>
-            <div class="reels-item" data-video-url="https://www.youtube.com/embed/NlPnw4AE980">
-              <a href="https://www.youtube.com/embed/NlPnw4AE980" data-fancybox="reels-gallery"> 
-                 <img src="" alt="Thumbnail 2">
-              </a>
-            </div> 
-            <div class="reels-item"  data-video-url="https://www.youtube.com/embed/3fy096broac">
-              <a href="https://www.youtube.com/embed/3fy096broac" data-fancybox="reels-gallery"> 
-                <img src='' alt="Thumbnail 1">
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/NlPnw4AE980"
+            >
+              <a
+                href="https://www.youtube.com/embed/NlPnw4AE980"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 2" />
               </a>
             </div>
-            <div class="reels-item" data-video-url="https://www.youtube.com/embed/NlPnw4AE980">
-              <a href="https://www.youtube.com/embed/NlPnw4AE980" data-fancybox="reels-gallery"> 
-                 <img src="" alt="Thumbnail 2">
-              </a>
-            </div> 
-            <div class="reels-item"  data-video-url="https://www.youtube.com/embed/3fy096broac">
-              <a href="https://www.youtube.com/embed/3fy096broac" data-fancybox="reels-gallery"> 
-                <img src='' alt="Thumbnail 1">
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/3fy096broac"
+            >
+              <a
+                href="https://www.youtube.com/embed/3fy096broac"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 1" />
               </a>
             </div>
-            <div class="reels-item" data-video-url="https://www.youtube.com/embed/NlPnw4AE980">
-              <a href="https://www.youtube.com/embed/NlPnw4AE980" data-fancybox="reels-gallery"> 
-                 <img src="" alt="Thumbnail 2">
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/NlPnw4AE980"
+            >
+              <a
+                href="https://www.youtube.com/embed/NlPnw4AE980"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 2" />
               </a>
-            </div> 
+            </div>
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/3fy096broac"
+            >
+              <a
+                href="https://www.youtube.com/embed/3fy096broac"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 1" />
+              </a>
+            </div>
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/NlPnw4AE980"
+            >
+              <a
+                href="https://www.youtube.com/embed/NlPnw4AE980"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 2" />
+              </a>
+            </div>
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/3fy096broac"
+            >
+              <a
+                href="https://www.youtube.com/embed/3fy096broac"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 1" />
+              </a>
+            </div>
+            <div
+              class="reels-item"
+              data-video-url="https://www.youtube.com/embed/NlPnw4AE980"
+            >
+              <a
+                href="https://www.youtube.com/embed/NlPnw4AE980"
+                data-fancybox="reels-gallery"
+              >
+                <img src="" alt="Thumbnail 2" />
+              </a>
+            </div>
           </div>
         </div>
       </section>
       <section id="4">
         <div class="articles-section">
-          
+          <div class="handle-container-small">
+            <div class="articles-container">
+              <h1>Articles</h1>
+              <div class="article-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod
+              </div>
+              <div class="articles-slider">
+                <div class="articles-item">
+                  <a href="#">
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+                    <div class="text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation ullamco
+                    </div>
+                    <span>
+                      <svg
+                        width="25"
+                        height="25"
+                        viewBox="0 0 25 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M12.8695 10.9698L13.313 0.478669L24.7937 12.9729L12.2994 24.4536L12.743 13.9625L0.754388 13.4567L0.880071 10.4587L12.8695 10.9698Z"
+                          fill="#282828"
+                        />
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="articles-item">
+                  <a href="#">
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+                    <div class="text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation ullamco
+                    </div>
+                    <span>
+                      <svg
+                        width="25"
+                        height="25"
+                        viewBox="0 0 25 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M12.8695 10.9698L13.313 0.478669L24.7937 12.9729L12.2994 24.4536L12.743 13.9625L0.754388 13.4567L0.880071 10.4587L12.8695 10.9698Z"
+                          fill="#282828"
+                        />
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="articles-item">
+                  <a href="#">
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+                    <div class="text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation ullamco
+                    </div>
+                    <span>
+                      <svg
+                        width="25"
+                        height="25"
+                        viewBox="0 0 25 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M12.8695 10.9698L13.313 0.478669L24.7937 12.9729L12.2994 24.4536L12.743 13.9625L0.754388 13.4567L0.880071 10.4587L12.8695 10.9698Z"
+                          fill="#282828"
+                        />
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="articles-item">
+                  <a href="#">
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+                    <div class="text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation ullamco
+                    </div>
+                    <span>
+                      <svg
+                        width="25"
+                        height="25"
+                        viewBox="0 0 25 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M12.8695 10.9698L13.313 0.478669L24.7937 12.9729L12.2994 24.4536L12.743 13.9625L0.754388 13.4567L0.880071 10.4587L12.8695 10.9698Z"
+                          fill="#282828"
+                        />
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="articles-item">
+                  <a href="#">
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+                    <div class="text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation ullamco
+                    </div>
+                    <span>
+                      <svg
+                        width="25"
+                        height="25"
+                        viewBox="0 0 25 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M12.8695 10.9698L13.313 0.478669L24.7937 12.9729L12.2994 24.4536L12.743 13.9625L0.754388 13.4567L0.880071 10.4587L12.8695 10.9698Z"
+                          fill="#282828"
+                        />
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="articles-item">
+                  <a href="#">
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+                    <div class="text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation ullamco
+                    </div>
+                    <span>
+                      <svg
+                        width="25"
+                        height="25"
+                        viewBox="0 0 25 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M12.8695 10.9698L13.313 0.478669L24.7937 12.9729L12.2994 24.4536L12.743 13.9625L0.754388 13.4567L0.880071 10.4587L12.8695 10.9698Z"
+                          fill="#282828"
+                        />
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
